# dpd-baselines

./: README.md  pyproject.toml
checkpoints/: first_run.pt  first_run_branch_model.pt
scripts/: run_brunch_model.py  run_hello_world_model.py
src/dpd_baselines/: __init__.py
src/dpd_baselines/blocks/: __init__.py  delay.py  filters.py  polinomials.py  polynomials.py
src/dpd_baselines/models/: Hello_world.py  branch_model.py
src/dpd_baselines/utils/: live_monitor  live_monitor.py
tests/: delay_test.ipynb  filters_test.ipynb  signals_test.ipynb
